Moved text up and fixed scrolling issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ canvas{
 }
 #content{
 	position:relative;
+	z-index:0!important;
 }
 #overlay{
 	position:absolute;
